--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -9176,6 +9176,36 @@ a {
           }
         }
       }
+      .block.about {
+        padding: 20px;
+        .about-slider-wrapper {
+          width: 67%;
+          .about-slider {
+            .slick-list {
+              .slick-track {
+                .about-slider-item {
+                  width: 20vw;
+                  margin-right: 15px;
+                  img {
+                    width: 100%;
+                    height: 100%;
+                  }
+                }
+              }
+            }
+          }
+        }
+        .about-block {
+          .about-block-text {
+            .about-block-text__head {
+              font-size: 18px;
+            }
+            .about-block-text__main {
+              font-size: 14px;
+            }            
+          }
+        }
+      }
       .block.fabrics-result {
         padding: 20px 20px 0px;
         .fabrics-result-item {
